# stl_helper

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  bottle.rs  config.toml  stl_helper.code-workspace  watcher.rs
src/: camera.rs  config.rs  loader.rs  main.rs  other.code-workspace  storage.rs  watcher.rs
stash/: bowl.rs  flywheel.rs
static/: index.html
static/css/: viewer.css
static/js/: app.js
templates/: app.js  index.html
