[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
async-watcher = "0.1.1"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rust-embed = { version = "6.8.1", features = ["rocket"] }
