[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
async-watcher = "0.1.1"
clap = { version = "4.3.12", features = ["derive"] }
lru = "0.11.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rust-embed = { version = "6.8.1", features = ["rocket"] }
serde = "1.0.171"
serde_json = "1.0.102"
stl_io = "0.7.0"
tokio = { version = "1.29.1", features = ["sync"] }
toml = "0.7.6"
